# panorama

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  tags
.github/workflows/: ci.yml
client/: CMakeLists.txt  Makefile  cmake_install.cmake
client/include/: DataBuffer.hpp
client/include/client/: CheckBoxPanel.h  DataBuffer.hpp  argparser.hpp  buffer_base.hpp  command_processor.hpp  config_manager.hpp  data_filters.hpp  data_logger.hpp  esp32_scanner.hpp  graph_panel.hpp  json_reader.hpp  json_writer.hpp  mainframe.hpp  mainwindow.hpp  message_model.hpp  panorama_defines.hpp  post_processing.hpp  sensor.hpp  sensor_data_panel.h  sensor_manager.hpp  settings_dialog.hpp  tcp_client.hpp
client/include/common/: panorama_colours.hpp  panorama_defines.hpp  panorama_utils.hpp
client/include/config/: panorama_config.hpp
client/src/: DataBuffer.cpp  argparser.cpp  checkboxpanel.cpp  command_processor.cpp  config_manager.cpp  data_filters.cpp  data_logger.cpp  esp32_scanner.cpp  example.json  graph_panel.cpp  json_reader.cpp  json_writer.cpp  main.cpp  mainframe.cpp  mainwindow.cpp  message_model.cpp  post_processing.cpp  sensor.cpp  sensor_data_panel.cpp  sensor_manager.cpp  settings_dialog.cpp  tcp_client.cpp
doc/: panorama.md
doc/internal/: workflow.md
firmware/: wifi_esp32.ino
firmware/panorama/: .clangd  CMakeLists.txt  platformio.ini
firmware/panorama/.cache/clangd/index/: main.cpp.621DB008C2D6724D.idx  test.cpp.4729B44F633614F3.idx
firmware/panorama/include/: i2c_protocol.h  sensor_data.h  temperature_sensor.h  ultrasonic_sensor.h
firmware/panorama/lib/panorama_server/: panorama_server.cpp  panorama_server.h
firmware/panorama/src/: commands.cpp  i2c_protocol.cpp  main.cpp  sensor_data.cpp  temperature_sensor.cpp  test.cpp  test_json.cpp  test_server.py  test_udp.cpp  ultrasonic_sensor.cpp
scripts/: build.sh  clean.sh  env.sh  example.json  run.sh  runtests.sh  test.sh  wxbuild.sh  wxbuild_msvc.ps1
tests/: CMakeLists.txt  json_reading.cpp  rapidJsonTest.cpp  telemetry.json  test_bringup.cpp
tools/: client.py  client_hasna.py  esp32.py  example.json  noisy_graph.py  server.py  server_hasna.py
tools/pserver/: README.md  pserver.py  pserver_config.py  pstream_base.py  pstream_json.py  pstreamer.py  putils.py
